[package]
name = "dropbox-content-hasher"
version = "0.1.0"

[dependencies]
digest = "^0.4"
sha2 = "^0.4"
generic-array = "^0.6"
rand = "^0.3"

[lib]
name = "dropbox_content_hasher"
path = "src/lib.rs"

[[bin]]
name = "hash-file"
path = "src/hash_file.rs"

[[bin]]
name = "run-tests"
path = "src/run_tests.rs"
