[package]
name = "dropbox-content-hasher"
version = "0.1.0"

[dependencies]
digest = "^0.7"
sha2 = "^0.7"
generic-array = "^0.9"
hex = "0.3"

[dev-dependencies]
rand = "^0.3"

[lib]
name = "dropbox_content_hasher"
path = "src/lib.rs"

[[bin]]
name = "hash-file"
path = "src/hash_file.rs"

[[bin]]
name = "run-tests"
path = "src/run_tests.rs"
