[package]
name = "dropbox-content-hasher"
version = "0.2.0"

[dependencies]
digest = "^0.6"
sha2 = "^0.6"
generic-array = "^0.8"
rand = "^0.3"

[lib]
name = "dropbox_content_hasher"
path = "src/lib.rs"

[[bin]]
name = "hash-file"
path = "src/hash_file.rs"

[[bin]]
name = "run-tests"
path = "src/run_tests.rs"
